# learn-langchain

./: .gitignore
langchain-models/: .env  README.md  main.py  pyproject.toml
langchain-models/1-ChatModels/: chatmodel-azure.py  chatmodel-hf-local.py  chatmodel-hf.py
langchain-models/10-TextSplitters/: 1-length-based-text-splitting.py  2-text-structure-based-splitting.py  3-document-based-language-splitting.py  4-document-based-markdown-splitting.py  5-semantic-meaning-based-splitting.py
langchain-models/11-Vectorstores/: 1-vector-stores.py
langchain-models/12-Retrievers/: 1-wikpedia-retrievers.py  2-vectorstore-retriver.py  3-maximum-marginal-reference-retriever-strategy.py  4-multi-query-retriever-strategy.py  5-compression-contextual-retriever-strategy.py
langchain-models/13-RAG/: 1-youtube-video-rag.py  2-youtube-video-rag-chain.py
langchain-models/14-Tools/: 1-built-in-tools.py  3-structured-tools.py  4-basetools.py  5-toolkits.py  6-tools-calling.py  7-currency-conversion-tools.py
langchain-models/15-AIAgents/: 1-book-glight-agent.py
langchain-models/2-EmbeddingModels/: embedding-azure.py  embedding-local.py
langchain-models/3-Document Similarity/: document-similarity.py
langchain-models/4-Prompts/: 1-prompt-generator.py  2-prompt-ui.py  3-prompt-ui-chain.py  4-messages.py  5-chatbot.py  6-chat-prompt-template.py  7-message-placeholder.py  chat-history.txt  research_paper_summary_template.json
langchain-models/5-StructuredOutputs/: 1-typeddictionary-demo.py  2-with-structured-output-typeddic.py  3-pydantic-demo.py  json-schema.json  (+2 more)
(+28 files in other folders)
